Add site heading and motto

--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>BESst song</h1>
+    <p>the best song is allohumma solli ala 
+        sayyidina nabiyina muhammadiv vasallam</p>
+
     <img src="/img/photo_2022-08-15_18-41-39.jpg"    alt="">
-    1. loyiha papka va boshlang'ich fayllarni tayyorlash. 
-    2. Gitni loyiha papkasida ishga tushirish 
-    3. Dastlabki holatni commit qilish(yani saqlab qo'yish) 
-    4. Githubda repo ochib, loyihani unga ulash.
-     5. Loyihadagi navbatdagi vazifani bajaish(yangi imkoniyat, xatoni to'girlash, refaktor...)
-      6. O'zgarisharni saqlash stadiyasiga tayyorlanish(stage).
-       7. commit qilish-o'zgarishlarga nom berish 
-       8. o'zgarishlarni Githuda repoga yuborish.
+    <!-- 1. loyiha papka va boshlang'ich fayllarni tayyorlash.  -->
+    <!-- 2. Gitni loyiha papkasida ishga tushirish  -->
+    <!-- 3. Dastlabki holatni commit qilish(yani saqlab qo'yish)  -->
+    <!-- 4. Githubda repo ochib, loyihani unga ulash. -->
+     <!-- 5. Loyihadagi navbatdagi vazifani bajaish(yangi imkoniyat, xatoni to'girlash, refaktor...) -->
+      <!-- 6. O'zgarisharni saqlash stadiyasiga tayyorlanish(stage). -->
+       <!-- 7. commit qilish-o'zgarishlarga nom berish  -->
+       <!-- 8. o'zgarishlarni Githuda repoga yuborish. -->
 </body>
 </html>
